# prisma-to-seaorm

./: .envrc  .gitignore  .markdownlint.yaml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml
.trunk/: trunk.yaml
js/: .pnpm-approve-builds.json  .prettierignore  eslint.config.mjs  package.json  pnpm-lock.yaml
rs/: Cargo.toml
rs/crates/example/: Cargo.toml  build.rs  schema.json
rs/crates/example/src/: lib.rs
rs/crates/prisma-to-sea-orm-codegen/: Cargo.toml
rs/crates/prisma-to-sea-orm-codegen/src/: codegen.rs  lib.rs  prisma_dmmf.rs
rs/crates/prisma-to-sea-orm-codegen/tests/: find_unique_test.rs
