[package]
name = "prisma-to-sea-orm-codegen"
version = "0.1.0"
edition = "2024"
publish = true

[dependencies]
anyhow = "1.0.102"
heck = "0.5.0"
indexmap = "2.14.0"
prettyplease = "0.2.37"
proc = "0.1.4"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = "2.0.117"
